--- a/transaction-dispute-app/package.json
+++ b/transaction-dispute-app/package.json
@@ -38,5 +38,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "msw": "^0.44.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
