--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
     "body-parser": "^1.20.0",
+    "concurrently": "^7.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "winston": "^3.8.1"
+  },
+  "scripts": {
+    "start": "npm install && node backend/server.js",
+    "react": "cd ./transaction-dispute-app && npm install && npm start",
+    "dev": "concurrently \"npm run start\" \"npm run react\""
   }
 }
